tests/module/mod73.hs
-- !!! Undefined qualified variable in expression
module M where
f x = Prelude.meplicate x
